# OOP_Project

./: CMakeLists.txt  README.md  config.h  main.cpp
CoreGameLogic/: AssetManager.cpp  AssetManager.h  Component.cpp  Component.h  GameCamera.cpp  GameCamera.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h
EventSystem/: ActionEvent.cpp  ActionEvent.h  FunctionEvent.cpp  FunctionEvent.h
GameLogic/: GameCamera.cpp  GameCamera.h  PlayerMovement.cpp  PlayerMovement.h  PlayerRenderer.cpp  PlayerRenderer.h  TerrainMinerTest.cpp  TerrainMinerTest.h
GameLogic/Collisions/: CollisionInfo.h  RaycastHitInfo.h
GameLogic/Dynamics/: V2SecondOrderDynamics.cpp  V2SecondOrderDynamics.h
GameLogic/Map/: MapFileReader.cpp  MapFileReader.h  MapGenerator.cpp  MapGenerator.h  Terrain.cpp  Terrain.h  TerrainChunk.cpp  TerrainChunk.h  TerrainData.cpp  TerrainData.h  TerrainPoint.h
GameLogic/Ores/: IOreContainer.h  OreInfo.cpp  OreInfo.h
GameLogic/Player/: PlayerMovement.cpp  PlayerMovement.h  PlayerRenderer.cpp  PlayerRenderer.h
GameLogic/Player/Inventory/: IItem.cpp  IItem.h  InventoryManager.cpp  InventoryManager.h  InventorySlot.h  ItemInfo.h  PlayerInventory.cpp  PlayerInventory.h
GameLogic/Player/Items/: SingleOreTankItem.cpp  SingleOreTankItem.h
GameLogic/Player/Tools/: BallSpawnerTool.cpp  BallSpawnerTool.h  MiningTool.cpp  MiningTool.h
GameLogic/Testing/: OrbDeployer.cpp  OrbDeployer.h  PulsingOrb.cpp  PulsingOrb.h  TerrainMinerTest.cpp  TerrainMinerTest.h  TerrainRaycasterTest.cpp  TerrainRaycasterTest.h
GameLogic/UI/: UIElement.cpp  UIElement.h  UIInventory.cpp  UIInventory.h  UIManager.cpp  UIManager.h  UIOreMeter.cpp  UIOreMeter.h
GameLogic/UI/Inventory/: UIInventory.cpp  UIInventory.h  UIInventorySlot.h
Libraries/: stb_image.h
Shaders/: default.vert  inventorySlot.frag  oreMeterShader.frag  postProcessingShader.frag  postProcessingShader.fs  singleOreTankFillBar.frag  squareMarchingPostProcessingShader.frag  squareMarchingPostProcessingShader.fs  squareMarchingShader.frag  squareMarchingShader.fs  testShader.vs
Testing/: LineCollisionTest.cpp  LineCollisionTest.h
Utilities/: GameUtilities.cpp  GameUtilities.h  SmoothingUtils.cpp  SmoothingUtils.h  Vector2Utils.cpp  Vector2Utils.h
